fixed spacing/layout as requested by previous reviewer

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ li {
   display: flex;
   margin-top: 32px;
   flex-direction: column;
-  width: 80%;
   max-height: 192px;
   margin-bottom: 0;
   margin-left: 24px;
@@ -77,12 +76,13 @@ li {
   color: #36b37f;
   margin-top: 0;
   text-align: center;
+  margin-bottom: 0;
 }
 
 .texting {
   flex: 1;
   display: flex;
-  margin-top: 58px;
+  margin-top: 30px;
   height: 164px;
   margin-left: auto;
   margin-right: auto;
@@ -98,13 +98,13 @@ li {
   font-weight: normal;
   color: #172b4d;
   text-align: center;
+  margin: 20px 44px 0 44px;
 }
 
 .icons {
   flex: 1;
   display: flex;
   flex-direction: row;
-  margin-top: 58px;
   margin-left: auto;
   margin-right: auto;
 }
